css/style.css
#welcome-section{
    background-color: #313235;
    color: white;
    height: 80vh;
    padding-top: 30vh;
}

#welcome-section h1 {
    font-size: 5rem;
}

#welcome-section p {
    font-size: 2rem;
    color: red;
}

#navbar{
    background-color: #680f29 !important;
}

#nav-link {
    font-size:2rem !important;
}
.card-img-top{
    max-width: 300px;
}

#projects{
    text-decoration: underline;
    height: 100%;
    background-color: #45567D;
    padding-top: 5vh;
    padding-bottom: 5vh;
    color: #fff;
}

.card-body {
    margin-top: 0;
}

